WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166980
REGRESSION (
r210621
): [mac-wk2] LayoutTest fast/mediastream/MediaStream-video-element-video-tracks-disabled-then-enabled.html timing out
https://bugs.webkit.org/show_bug.cgi?id=166980
Summary
REGRESSION (r210621): [mac-wk2] LayoutTest fast/mediastream/MediaStream-video...
Ryan Haddad
Reported
2017-01-12 12:47:36 PST
LayoutTest fast/mediastream/MediaStream-video-element-video-tracks-disabled-then-enabled.html timing out
https://build.webkit.org/results/Apple%20Sierra%20Release%20WK2%20(Tests)/r210666%20(2684)/results.html
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Fmediastream%2FMediaStream-video-element-video-tracks-disabled-then-enabled.html
Attachments
Patch.
(6.95 KB, patch)
2017-01-12 16:04 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2017-01-12 12:48:07 PST
Started with
http://trac.webkit.org/changeset/210621
Ryan Haddad
Comment 2
2017-01-12 13:07:08 PST
Eric says he understands the issue and will fix this today. Marked as a timeout in
http://trac.webkit.org/projects/webkit/changeset/210678
Eric Carlson
Comment 3
2017-01-12 16:04:20 PST
Created
attachment 298726
[details]
Patch.
Eric Carlson
Comment 4
2017-01-13 06:28:31 PST
Committed
r210730
:
https://trac.webkit.org/r210730
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug